--- a/day1/index.html
+++ b/day1/index.html
@@ -52,7 +52,7 @@
           <h4>3D Buttons</h4>
           <button type="button" name="button" class="btn-3d-1">3D Button 1</button>
 
-          <button type="button" name="button" class="btn-3d-2">Circle!</button>
+          <button type="button" name="button" class="circle-button">Circle!</button>
 
         </section>
 
